[workspace]
members = [
    "crates/cli",
    "crates/rpc_pool",
    "duplicate-tx-prevention-contract",
    "crates/tx_submission",
]

[workspace.dependencies]
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.95"
bincode = "1.3.3"
bs58 = "0.5.1"
clap = { version = "4.5.29", features = ["derive"] }
dotenv = "0.15.0"
solana-client = "2.1.13"
solana-sdk = "2.1.13"
futures = "0.3.31"
