[workspace]
members = [
    "crates/cli",
    "crates/rpc_pool",
    "duplicate-tx-prevention-contract",
    "crates/tx_submission",
]

[workspace.dependencies]
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.95"
bincode = "1.3.3"
bs58 = "0.5.1"
clap = { version = "4.5.29", features = ["derive"] }
dotenv = "0.15.0"
solana-client = "2.1.13"
solana-sdk = { version = "2.1.13", features = ["full", "borsh"] }
futures = "0.3.31"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
shellexpand = "3.1.0"
axum = "0.8"
serde_json = "1"
tower = "0.4.0"
base64 = "0.21"
cached = { version = "0.54.0", features = ["proc_macro", "async"] }
sha2 = "0.9.1"
