[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
bs58.workspace = true
clap.workspace = true
dotenv.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
rpc_pool = { path = "../rpc_pool" }
tokio.workspace = true
tx_submission = { path = "../tx_submission" }
axum.workspace = true
tower.workspace = true
serde.workspace = true
base64.workspace = true
