[package]
name = "tx_submission"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk.workspace = true
solana-client.workspace = true
rpc_pool = { path = "../rpc_pool" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
dotenv.workspace = true
shellexpand.workspace = true
bs58.workspace = true
bincode.workspace = true
anyhow.workspace = true
